--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<div>
+<!-- <div>
   <h1>My First Angular App</h1>
-</div>
+</div> -->
 
 <app-header></app-header>
 <main>
-  <app-post-create></app-post-create>
-  <app-post-list></app-post-list>
+  <router-outlet></router-outlet>
 </main>
