--- a/src/app/header/header/header.component.html
+++ b/src/app/header/header/header.component.html
@@ -1,2 +1,22 @@
-<p>header works!</p>
-<mat-toolbar color="primary">My App</mat-toolbar>
+<mat-toolbar color="primary">
+    <span><a routerLink="">My Messages</a></span>
+    <span class="spacer"></span>
+    <ul>
+        <li *ngIf="userIsAuthenticated">
+            <a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
+        </li>
+
+        <li *ngIf="!userIsAuthenticated">
+            <a mat-button routerLink="/auth/login" routerLinkActive="mat-accent">Login</a>
+        </li>
+
+        <li *ngIf="!userIsAuthenticated">
+            <a mat-button routerLink="/auth/signup" routerLinkActive="mat-accent">Sign Up</a>
+        </li>
+
+        <li *ngIf="userIsAuthenticated">
+            <button mat-button (click)="onLogout()">Logout</button>
+        </li>
+    </ul>
+</mat-toolbar>
+    
