--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,8 +1,9 @@
-<p>post-create works!</p>
-<!-- <textarea rows="6" [value] = "newPost" #postInput ></textarea> 
+<!-- 
+    <p>post-create works!</p>
+    <textarea rows="6" [value] = "newPost" #postInput ></textarea> 
 <button (click) = "onAddPost(postInput)" >Save Post</button> 
 <textarea rows = "6" [(ngModel)] = 'enteredValue'></textarea> -->
-<mat-card>
+<!-- <mat-card>
     <mat-form-field>
         <textarea matInput rows = "6" [(ngModel)] ='enteredValue'></textarea>
     </mat-form-field>
@@ -11,5 +12,30 @@
     (click) = "onAddPost()" >Save Psot</button>
 </mat-card>
 <hr>
-<!--<button (click) = "onAddPost()" >Save Post</button> -->
-<p>{{ newPost }}</p>
+<button (click) = "onAddPost()" >Save Post</button> 
+<p>{{ newPost }}</p> -->
+
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<mat-card>
+    <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
+        <mat-form-field>
+            <input matInput type="text" formControlName="title" placeholder="Post Title">
+            <mat-error *ngIf="form.get('title').invalid">Please enter a post title.</mat-error>
+        </mat-form-field>
+
+        <div>
+            <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+            <input type="file" #filePicker (change)="onImagePicked($event)">
+        </div>
+
+        <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
+            <img [src]="imagePreview" [alt]="form.value.title">
+        </div>
+
+        <mat-form-field>
+            <textarea matInput rows="4" formControlName="content" placeholder="Post Content"></textarea>
+            <mat-error *ngIf="form.get('content').invalid">Please enter a post title.</mat-error>
+        </mat-form-field>
+        <button mat-raised-button color="primary" type="submit">Save Post</button>
+    </form>
+</mat-card>
