--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -1,4 +1,4 @@
-<p>post-list works!</p>
+<!-- <p>post-list works!</p>
 <mat-accordion>
     <mat-expansion-panel>
         <mat-expansion-panel-header>
@@ -6,4 +6,26 @@
         </mat-expansion-panel-header>
         <p> I am an expansion Panel</p>
     </mat-expansion-panel>
+</mat-accordion> -->
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<mat-accordion #accordion="matAccordion" multi="true" *ngIf="posts.length > 0 && !isLoading">
+    <button mat-raised-button color="prirmary" (click)="accordion.openAll()">Expand All </button>
+    <button mat-raised-button color="prirmary" (click)="accordion.closeAll()">Collapse All </button>
+    <mat-expansion-panel *ngFor="let post of posts">
+        <mat-expansion-panel-header>
+            {{post.title}}
+        </mat-expansion-panel-header>
+        <div class="post-image">
+            <img [src]="post.imagePath" [alt]="post.title">
+        </div>
+        <p> {{post.content}}</p>
+        <mat-action-row *ngIf="userIsAuthenticated && userId === post.creator">
+            <a mat-button color="primary" [routerLink]="['/edit', post.id]">EDIT</a>
+            <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
+        </mat-action-row>
+    </mat-expansion-panel>
+    <!-- <button mat-raised-button *ngIf="userIsAuthenticated" color="warn" (click)="onDeleteAll()">Delete All Post</button> -->
 </mat-accordion>
+<mat-paginator [length]="totalPosts" [pageSize]="postsPerPage" [pageSizeOptions]="pageSizeOptions"
+    (page)="onChangedPage($event)" *ngIf="posts.length > 0"></mat-paginator>
+<p class=" info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading"> No Posts added yet !!</p>
